Change URL object creation to use URI